# umami-alerts

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  LOCAL_TESTING.md  README.md  config.sample.toml  docker-compose.dokploy.yml  docker-entrypoint.sh
src/: main.rs
src/api/: client.rs  models.rs
src/config/: env.rs  mod.rs  models.rs  validation.rs
src/error/: mod.rs
src/report/: generator.rs
